Prevent header FOUC by forcing the navigation not to wrap, but rather be clipped (#132)
* Prevent header FOUC by forcing the navigation not to wrap, but rather be clipped.

* Set flex alignment so that items wrap under the nav, not above

* Fix nav menu item alignment

--- a/mu-plugins/blocks/global-header-footer/postcss/header/header.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/header.pcss
@@ -12,7 +12,7 @@ html {
 
 .wp-block-group.global-header {
 	display: flex;
-	align-items: flex-end;
+	align-items: flex-start;
 	font-size: 21px;
 	height: var(--wp-global-header-height);
 
@@ -28,6 +28,7 @@ html {
 		position: sticky;
 		top: var(--wp-admin--admin-bar--height, 0);
 		font-size: var(--wp--preset--font-size--small);
+		line-height: 24px;
 	}
 
 	& > * {
