--- a/mu-plugins/blocks/global-header-footer/postcss/header/logos.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/logos.pcss
@@ -7,6 +7,11 @@
 		display: none;
 		padding-right: var(--wp--style--block-gap);
 
+		@media (--short-screen) {
+			padding-bottom: 18px;
+			padding-top: 18px;
+		}
+
 		@media (--desktop-wide) {
 			display: inline;
 		}
@@ -21,6 +26,11 @@
 		@media (--tablet) {
 			flex-basis: auto;
 			flex-shrink: 0;
+		}
+
+		@media (--short-screen) {
+			padding-bottom: 16px;
+			padding-top: 16px;
 		}
 
 		@media (--desktop-wide) {
